# unhomeal_server

./: .gitignore  Cargo.toml
migrations/2022-09-20-042958_create_all/: down.sql  up.sql
src/: db.rs  error.rs  main.rs  routes.rs  token.rs
src/db/: models.rs  schema.rs
src/db/models/: application.rs  meal.rs  rate.rs  total_rate.rs  user.rs
src/routes/: apply.rs  loginout.rs  rate.rs  test.rs  user.rs
