[package]
name = "unhomeal_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async
tokio = { version = "1", features = [ "full" ] }

# Error handling
thiserror = "1"

# Web-framework
actix-web = { version = "4", features = [ "rustls" ] }

# Serialization
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = [ "serde" ] }


# TLS
rustls = "0.20"
rustls-pemfile = "1"
