[package]
name = "unhomeal_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async
tokio = { version = "1", features = [ "full" ] }
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Web-framework
actix-web = { version = "4", features = [ "rustls" ] }
mime = "0.3.16"
jsonwebtoken = "8.1.1"
uuid = { version = "1.1.2", features = [ "v4" ] }

# Serialization
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "0.9"
serde_repr = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }

# TLS
rustls = "0.20"
rustls-pemfile = "1"

# Database
diesel = { version = "2", features = [
    "mysql",
    "r2d2",
    "chrono",
    "serde_json",
] }
